feat: update authentication flow and configuration for production deployment

--- a/travel-blog/.env.local.example
+++ b/travel-blog/.env.local.example
@@ -3,7 +3,7 @@
 # In production, point to deployed Workers URL
 
 # Development (Wrangler dev server)
-NEXT_PUBLIC_AUTH_API_URL=http://localhost:8787
+# NEXT_PUBLIC_AUTH_API_URL=http://localhost:8787
 
-# Production (uncomment and update with your Workers URL)
-# NEXT_PUBLIC_AUTH_API_URL=https://your-workers-subdomain.workers.dev
+# Production (deployed Workers)
+NEXT_PUBLIC_AUTH_API_URL=https://travel-blog-auth.andreas-e-ludviksen.workers.dev
