--- a/travel-blog/.gitignore
+++ b/travel-blog/.gitignore
@@ -41,6 +41,9 @@ next-env.d.ts
 .wrangler/
 wrangler.toml.backup
 
+# User credentials (migrated to D1 database)
+workers/users.json
+
 # environment variables
 .env
 .env.local
