--- a/travel-blog/wrangler.toml
+++ b/travel-blog/wrangler.toml
@@ -8,6 +8,12 @@ compatibility_flags = ["nodejs_compat"]
 binding = "RATE_LIMITER"
 id = "06c6c3b1bb6d455abdf8dea2feef2796"
 
+# D1 Database for user storage
+[[d1_databases]]
+binding = "DB"
+database_name = "travel-blog-users"
+database_id = "13a81283-7ad4-4879-8287-c435eac578e4"
+
 # Environment variables (secrets set separately via wrangler secret put)
 [vars]
 NODE_ENV = "production"
