Refactor authentication and media upload APIs
- Removed unused imports and cleaned up code in MediaUploader and PostRenderer components.
- Updated Template02 and Template05 to improve type safety and remove unnecessary variables.
- Enhanced auth API to include JWT token in responses for cross-domain authentication.
- Deleted middleware.ts as it is no longer needed.
- Updated tsconfig.json to exclude unnecessary directories.
- Added production environment variables for Cloudflare Pages deployment.
- Created API route proxies for authentication and media upload operations.
- Implemented CORS handling in media and posts workers.
- Improved error logging in Cloudflare Images client.
- Updated worker configurations for D1 databases and R2 buckets.

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -38,6 +38,8 @@ jobs:
         working-directory: ./travel-blog
         env:
           NEXT_PUBLIC_AUTH_API_URL: https://travel-blog-auth.andreas-e-ludviksen.workers.dev
+          NEXT_PUBLIC_POSTS_API_URL: https://travel-blog-posts.andreas-e-ludviksen.workers.dev
+          NEXT_PUBLIC_MEDIA_API_URL: https://travel-blog-media.andreas-e-ludviksen.workers.dev
       
       - name: Deploy to Cloudflare Pages
         uses: cloudflare/wrangler-action@v3
